--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,15 +7,17 @@
     tools:context=".MainActivity"
     android:background="@color/black"
     android:orientation="vertical"
-    android:padding="10dp"
+    android:padding="8dp"
     android:weightSum="10">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:paddingTop="8dp"
-        android:layout_weight="0.8"
+        android:layout_marginTop="32dp"
+        android:layout_weight="0.72"
         android:weightSum="10"
+        android:paddingRight="16dp"
+        android:paddingTop="8dp"
         android:orientation="horizontal"
        >
         <ImageView
@@ -30,6 +32,7 @@
             android:layout_width="0dp"
             android:layout_weight="8"
             android:layout_height="match_parent"
+            android:textSize="16sp"
             android:padding="8dp"
             android:background="@color/white"
             android:layout_gravity="center"
@@ -48,33 +51,40 @@
         <ImageView
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:src="@drawable/mian_frog_jelly"
+            android:src="@drawable/main_frog_jelly"
             android:layout_gravity="center"/>
     </LinearLayout>
 
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="4">
+        android:layout_weight="5">
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/mian_gold_notice"
-            android:layout_gravity="center"/>
-        <TextView
-            android:id="@+id/food_log"
+        <ScrollView
+            android:id="@+id/log_scroll"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_margin="24dp"
-            android:textStyle="bold"
-            android:textColor="@color/white"
-            android:text=""
-            android:gravity="center_horizontal"/>
+            android:layout_gravity="center"
+            android:layout_marginVertical="96dp"
+            android:layout_marginHorizontal="40dp">
+
+            <TextView
+                android:id="@+id/food_log"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Ready..."
+                android:textColor="@color/white"
+                android:textSize="24sp"
+                android:layout_gravity="center"
+                android:textStyle="bold"/>
+        </ScrollView>
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/main_gold_notice"
+            android:layout_gravity="center"/>
+
     </FrameLayout>
-
-
-
-
 
 </LinearLayout>
