--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -76,7 +76,9 @@
             android:inputType="text"
             android:textColorHint="#A8A3A3"
             android:hint="@string/type_food_name"
-            android:background="@drawable/main_border"/>
+            android:background="@drawable/main_border">
+            <requestFocus/>
+        </EditText>
     </LinearLayout>
     <LinearLayout
         android:id="@+id/back_ground"
@@ -85,8 +87,7 @@
         android:layout_weight="10"
         android:orientation="vertical"
         android:weightSum="2"
-        android:clickable="true"
-        android:onClick="backGroundClicked">
+        android:onClick="hideFoodInputEditText">
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
