focus error fix2

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -89,7 +89,7 @@
         android:layout_weight="10"
         android:orientation="vertical"
         android:weightSum="2"
-        android:onClick="hideFoodInputEditText">
+        android:onClick="backgroundClicked">
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
