--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,14 +21,13 @@
         android:orientation="horizontal"
        >
         <ImageView
-            android:id="@+id/chef_hat"
+            android:id="@+id/cook_book"
             android:layout_width="0dp"
             android:layout_weight="2"
             android:layout_height="match_parent"
-            android:src="@drawable/main_chef_hat"
+            android:src="@drawable/main_chef_hat_3d"
             android:clickable="true"
             android:onClick="chefHatClicked"
-            android:padding="2dp"
             />
         <LinearLayout
             android:id="@+id/menu_list"
@@ -38,32 +37,36 @@
             android:layout_weight="8"
             android:orientation="horizontal">
             <ImageView
+                android:padding="6dp"
                 android:id="@+id/health"
                 android:layout_width="0dp"
                 android:layout_weight="2"
                 android:layout_height="match_parent"
                 android:clickable="true"
                 android:onClick="healthCareClicked"
-                android:src="@drawable/main_ic_baseline_healing_24"/>
+                android:src="@drawable/pill"/>
             <ImageView
+
                 android:id="@+id/game_play"
                 android:layout_width="0dp"
                 android:layout_weight="2"
                 android:layout_height="match_parent"
-                android:src="@drawable/ic_baseline_videogame_asset_24"/>
+                android:src="@drawable/main_joystick"/>
             <ImageView
+                android:padding="4dp"
                 android:id="@+id/sell"
                 android:layout_width="0dp"
                 android:layout_weight="2"
                 android:layout_height="match_parent"
-                android:src="@drawable/ic_baseline_monetization_on_24"
+                android:src="@drawable/ic_main_dollar_exchange"
                 android:onClick="sellBtnClicked"/>
             <ImageView
-                android:id="@+id/settings"
+                android:padding="4dp"
+                android:id="@+id/house"
                 android:layout_width="0dp"
                 android:layout_weight="2"
                 android:layout_height="match_parent"
-                android:src="@drawable/ic_baseline_settings_24"/>
+                android:src="@drawable/main_house"/>
         </LinearLayout>
         <EditText
             android:visibility="gone"
@@ -146,7 +149,7 @@
                     android:layout_height="32dp"
                     app:layout_constraintRight_toRightOf="@id/log_scroll"
                     app:layout_constraintTop_toTopOf="@id/log_layout"
-                    android:src="@drawable/ic_baseline_attach_money_24"
+                    android:src="@drawable/ic_main_dollar_symbol"
                     />
 
             </LinearLayout>
