--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,8 @@
         android:orientation="horizontal"
        >
         <ImageView
-            android:id="@+id/cook_book"
+            android:layout_margin="2dp"
+            android:id="@+id/chef_hat"
             android:layout_width="0dp"
             android:layout_weight="2"
             android:layout_height="match_parent"
@@ -37,7 +38,8 @@
             android:layout_weight="8"
             android:orientation="horizontal">
             <ImageView
-                android:padding="6dp"
+                android:layout_marginTop="4dp"
+                android:padding="4dp"
                 android:id="@+id/health"
                 android:layout_width="0dp"
                 android:layout_weight="2"
@@ -46,7 +48,7 @@
                 android:onClick="healthCareClicked"
                 android:src="@drawable/pill"/>
             <ImageView
-
+                android:padding="4dp"
                 android:id="@+id/game_play"
                 android:layout_width="0dp"
                 android:layout_weight="2"
@@ -101,6 +103,7 @@
             android:gravity="center"
             >
             <ImageView
+                android:padding="4dp"
                 android:id="@+id/main_frog"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
