--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity"
     android:background="@color/black"
+    android:onClick="backgroundClicked"
     android:orientation="vertical"
     android:padding="8dp"
     android:weightSum="10">
@@ -94,8 +95,7 @@
         android:layout_height="0dp"
         android:layout_weight="10"
         android:orientation="vertical"
-        android:weightSum="2"
-        android:onClick="backgroundClicked">
+        android:weightSum="2">
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
