--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -47,7 +47,7 @@
                 android:layout_height="match_parent"
                 android:clickable="true"
                 android:onClick="healthCareClicked"
-                android:src="@drawable/main_pill"/>
+                android:src="@drawable/main_pill_icon"/>
             <ImageView
                 android:padding="4dp"
                 android:id="@+id/game_play"
@@ -69,6 +69,7 @@
                 android:layout_width="0dp"
                 android:layout_weight="2"
                 android:layout_height="match_parent"
+                android:onClick="houseClicked"
                 android:src="@drawable/main_house"/>
         </LinearLayout>
         <EditText
@@ -85,7 +86,7 @@
             android:inputType="text"
             android:textColorHint="#A8A3A3"
             android:hint="@string/type_food_name"
-            android:background="@drawable/main_border">
+            android:background="@drawable/main_border_white">
             <requestFocus/>
         </EditText>
     </LinearLayout>
