--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -111,7 +111,7 @@
                 android:src="@drawable/main_frog_jelly"
                 android:layout_gravity="center"
                 android:clickable="true"
-                android:onClick="touchedFrog"/>
+                android:onClick="frogClicked"/>
         </FrameLayout>
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/log_layout"
@@ -122,16 +122,23 @@
 
             <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_height="32dp"
+                android:layout_height="wrap_content"
                 app:layout_constraintLeft_toLeftOf="@id/log_layout"
                 app:layout_constraintTop_toTopOf="@id/log_layout"
                 android:layout_marginLeft="16dp"
                 android:orientation="horizontal">
-            <ImageView
+                <ImageView
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:src="@drawable/main_meat_stake"
                 android:onClick="foodClicked"/>
+                <ImageView
+                    android:padding="4dp"
+                    android:layout_marginLeft="16dp"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:src="@drawable/main_dumbbell"
+                    android:onClick="dumbbellClicked"/>
             </LinearLayout>
 
             <ImageView
