main paper Fragment

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,208 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.viewpager2.widget.ViewPager2
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/main_view_paper"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
-    android:background="@color/black"
-    android:onClick="backgroundClicked"
-    android:orientation="vertical"
-    android:padding="8dp"
-    android:weightSum="10">
+    android:orientation="horizontal">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginTop="32dp"
-        android:layout_weight="0.72"
-        android:weightSum="10"
-        android:paddingRight="16dp"
-        android:paddingTop="8dp"
-        android:orientation="horizontal"
-       >
-        <ImageView
-            android:layout_margin="2dp"
-            android:id="@+id/chef_hat"
-            android:layout_width="0dp"
-            android:layout_weight="2"
-            android:layout_height="match_parent"
-            android:src="@drawable/main_chef_hat_3d"
-            android:clickable="true"
-            android:onClick="chefHatClicked"
-            />
-        <LinearLayout
-            android:id="@+id/menu_list"
-            android:visibility="visible"
-            android:layout_height="match_parent"
-            android:layout_width="0dp"
-            android:layout_weight="8"
-            android:orientation="horizontal">
-            <ImageView
-                android:layout_marginTop="4dp"
-                android:padding="4dp"
-                android:id="@+id/health"
-                android:layout_width="0dp"
-                android:layout_weight="2"
-                android:layout_height="match_parent"
-                android:clickable="true"
-                android:onClick="healthCareClicked"
-                android:src="@drawable/main_pill_icon"/>
-            <ImageView
-                android:padding="4dp"
-                android:id="@+id/game_play"
-                android:layout_width="0dp"
-                android:layout_weight="2"
-                android:layout_height="match_parent"
-                android:src="@drawable/main_joystick"/>
-            <ImageView
-                android:padding="4dp"
-                android:id="@+id/sell"
-                android:layout_width="0dp"
-                android:layout_weight="2"
-                android:layout_height="match_parent"
-                android:src="@drawable/ic_main_dollar_exchange"
-                android:onClick="sellBtnClicked"/>
-            <ImageView
-                android:padding="4dp"
-                android:id="@+id/house"
-                android:layout_width="0dp"
-                android:layout_weight="2"
-                android:layout_height="match_parent"
-                android:onClick="houseClicked"
-                android:src="@drawable/main_house"/>
-        </LinearLayout>
-        <EditText
-            android:visibility="gone"
-            android:layout_width="0dp"
-            android:layout_weight="8"
-            android:layout_height="match_parent"
-            android:id="@+id/food_name_input"
-            android:textSize="16sp"
-            android:padding="8dp"
-            android:imeOptions="actionSend"
-            android:textColor="@color/white"
-            android:layout_gravity="center"
-            android:inputType="text"
-            android:textColorHint="#A8A3A3"
-            android:hint="@string/type_food_name"
-            android:background="@drawable/main_border_white">
-            <requestFocus/>
-        </EditText>
-    </LinearLayout>
-    <LinearLayout
-        android:id="@+id/back_ground"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="10"
-        android:orientation="vertical"
-        android:weightSum="2">
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:gravity="center"
-            >
-            <ImageView
-                android:padding="4dp"
-                android:id="@+id/main_frog"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/main_frog_jelly"
-                android:layout_gravity="center"
-                android:clickable="true"
-                android:onClick="frogClicked"/>
-        </FrameLayout>
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/log_layout"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            >
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintLeft_toLeftOf="@id/log_layout"
-                app:layout_constraintTop_toTopOf="@id/log_layout"
-                android:layout_marginLeft="16dp"
-                android:orientation="horizontal">
-                <ImageView
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:src="@drawable/main_meat_stake"
-                android:onClick="foodClicked"/>
-                <ImageView
-                    android:padding="4dp"
-                    android:layout_marginLeft="16dp"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:src="@drawable/main_dumbbell"
-                    android:onClick="dumbbellClicked"/>
-            </LinearLayout>
-
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:src="@drawable/main_gold_notice"
-                android:layout_gravity="center"/>
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="32dp"
-                app:layout_constraintRight_toRightOf="@id/log_layout"
-                app:layout_constraintTop_toTopOf="@id/log_layout"
-                android:layout_marginRight="16dp"
-                android:orientation="horizontal"
-                android:onClick="moneyClicked">
-                <ImageView
-                    android:layout_width="32dp"
-                    android:layout_height="32dp"
-                    app:layout_constraintRight_toRightOf="@id/log_scroll"
-                    app:layout_constraintTop_toTopOf="@id/log_layout"
-                    android:src="@drawable/main_dollar"
-                    />
-                <TextView
-                    android:id="@+id/money_string"
-                    android:layout_width="wrap_content"
-                    android:textStyle="bold"
-                    android:textSize="23sp"
-                    android:textColor="@color/white"
-                    android:text="100"
-                    android:layout_height="match_parent"
-                    android:layout_marginHorizontal="8dp"/>
-                <ImageView
-                    android:layout_width="32dp"
-                    android:layout_height="32dp"
-                    app:layout_constraintRight_toRightOf="@id/log_scroll"
-                    app:layout_constraintTop_toTopOf="@id/log_layout"
-                    android:src="@drawable/ic_main_dollar_symbol"
-                    />
-
-            </LinearLayout>
-            <ScrollView
-                android:id="@+id/log_scroll"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginVertical="96dp"
-                android:layout_marginHorizontal="40dp">
-                <TextView
-                    android:id="@+id/food_log"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Ready..."
-                    android:textColor="@color/white"
-                    android:textSize="16sp"
-                    android:textStyle="bold"/>
-            </ScrollView>
-            <ImageView
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:src="@drawable/main_ic_eraser"
-                android:clickable="true"
-                android:onClick="logEraser"
-                app:layout_constraintRight_toRightOf="@id/log_scroll"
-                app:layout_constraintBottom_toBottomOf="@id/log_scroll"/>
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </LinearLayout>
-</LinearLayout>
+</androidx.viewpager2.widget.ViewPager2>
