--- a/app/src/main/res/layout/activity_frog_house.xml
+++ b/app/src/main/res/layout/activity_frog_house.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".frogHouseActivity"
+    tools:context=".FrogHouseActivity"
     android:background="@color/white">
 
     <ListView
