--- a/app/src/main/res/layout/fragment_trade_page.xml
+++ b/app/src/main/res/layout/fragment_trade_page.xml
@@ -21,30 +21,35 @@
             android:layout_marginTop="16dp"
             android:layout_marginRight="16dp"
             android:src="@drawable/main_frog_jelly"/>
-    </FrameLayout>
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="2">
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="16dp"
-            android:textAlignment="center"
-            android:text="개구리를 꾹 누르면 근처 사람에게 보내집니다."
-            android:textColor="@color/white"
-            android:layout_gravity="center"
-            />
-<!--        TODO 다른사람에게 개구리를 빼앗기지 않게 조심하세요.-->
-<!--        TODO 근처에 개구리가 너무 많습니다. Max3마리-->
 
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:background="@drawable/main_gold_notice"/>
 
+
+
+        <FrameLayout
+            android:layout_width="wrap_content"
+            android:layout_height="80dp"
+            android:layout_gravity="bottom">
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:background="@drawable/fly_wood_notice"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="16dp"
+                android:textAlignment="center"
+                android:textStyle="bold"
+                android:text="개구리를 꾹 누르면 근처 사람에게 보내집니다."
+                android:textColor="@color/black"
+                android:layout_gravity="center"
+                />
+            <!--        TODO 다른사람에게 개구리를 빼앗기지 않게 조심하세요.-->
+            <!--        TODO 근처에 개구리가 너무 많습니다. Max3마리-->
+
+        </FrameLayout>
     </FrameLayout>
+
 
     <ListView
         android:id="@+id/trade_frog_listview"
