--- a/app/src/main/res/layout/alert_is_buy_new_frog.xml
+++ b/app/src/main/res/layout/alert_is_buy_new_frog.xml
@@ -33,12 +33,12 @@
     <ImageView
         android:layout_width="40dp"
         android:layout_height="40dp"
-        app:layout_constraintLeft_toRightOf="@+id/buy"
+        app:layout_constraintLeft_toRightOf="@+id/is_buy_button"
         app:layout_constraintTop_toTopOf="parent"
         android:src="@drawable/main_cancel_button" />
 
     <LinearLayout
-        android:id="@+id/buy"
+        android:id="@+id/is_buy_button"
         android:clickable="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
