--- a/app/src/main/res/layout/activity_temp.xml
+++ b/app/src/main/res/layout/activity_temp.xml
@@ -4,11 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white">
-
-    <ListView
-        android:id="@+id/house_activity"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+    tools:context=".center.house.ActivityFrogHouse">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
