--- a/app/src/main/res/layout/fragment_fight_page.xml
+++ b/app/src/main/res/layout/fragment_fight_page.xml
@@ -5,13 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="싸움 페이지는 아직 준비중 입니다."
-        android:textSize="24dp"
-        android:textStyle="bold"
-        android:gravity="center"
-        android:textColor="@color/black"/>
+    <androidx.constraintlayout.utils.widget.ImageFilterView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_egg"/>
 
 </LinearLayout>
