--- a/app/src/main/res/layout/fragment_trade_page.xml
+++ b/app/src/main/res/layout/fragment_trade_page.xml
@@ -2,9 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/black"
-    android:orientation="vertical"
-    android:weightSum="10">
+    android:orientation="vertical">
 
     <FrameLayout
         android:layout_width="wrap_content"
@@ -14,7 +14,7 @@
             android:layout_height="wrap_content"
             android:src="@drawable/traid_center_bg"/>
         <ImageView
-            android:id="@+id/trade_frog"
+            android:id="@+id/trade_frog_center_src"
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:layout_gravity="center"
@@ -40,7 +40,7 @@
                 android:textSize="16dp"
                 android:textAlignment="center"
                 android:textStyle="bold"
-                android:text="개구리를 꾹 누르면 근처 사람에게 보내집니다."
+                android:text="개구리를 꾹 누르면 근처 사람에게 공유됩니다."
                 android:textColor="@color/black"
                 android:layout_gravity="center"
                 />
@@ -50,11 +50,17 @@
         </FrameLayout>
     </FrameLayout>
 
-
-    <ListView
-        android:id="@+id/trade_frog_listview"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="6"/>
+        android:layout_height="match_parent"
+        android:paddingHorizontal="24dp">
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/trade_frog_recyclerview"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            android:orientation="vertical"/>
+    </FrameLayout>
+
 
 </LinearLayout>
