--- a/app/src/main/res/layout/listview_house_frog_item.xml
+++ b/app/src/main/res/layout/listview_house_frog_item.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/black"
-    android:padding="16dp">
+    android:padding="16dp"
+    android:id="@+id/click_background">
 
     <RelativeLayout
         android:layout_width="match_parent"
