--- a/app/src/main/res/layout/fragment_main_page.xml
+++ b/app/src/main/res/layout/fragment_main_page.xml
@@ -87,7 +87,7 @@
         </EditText>
     </LinearLayout>
     <LinearLayout
-        android:id="@+id/back_ground"
+        android:id="@+id/click_back_ground"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="10"
