--- a/app/src/main/res/layout/listview_house_frog_item.xml
+++ b/app/src/main/res/layout/listview_house_frog_item.xml
@@ -11,10 +11,10 @@
         android:layout_height="wrap_content">
 
         <ImageView
-            android:padding="16dp"
             android:id="@+id/frog_src"
-            android:layout_width="140dp"
-            android:layout_height="140dp"
+            android:layout_width="96dp"
+            android:layout_height="96dp"
+            android:layout_centerVertical="true"
             android:src="@drawable/main_frog_jelly"/>
 
         <LinearLayout
