--- a/app/src/main/res/layout/listview_house_frog_item.xml
+++ b/app/src/main/res/layout/listview_house_frog_item.xml
@@ -33,7 +33,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="null_frog_name"
-                android:textSize="24dp"
+                android:textSize="24sp"
                 android:layout_toRightOf="@id/frog_src"
                 android:layout_marginBottom="8dp"
                 android:layout_marginTop="8dp"
@@ -46,7 +46,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Creator: null"
-                android:textSize="16dp"
+                android:textSize="16sp"
                 android:textColor="#FFFFFF"
                 />
 
@@ -55,7 +55,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="PROPERTY: null"
-                android:textSize="16dp"
+                android:textSize="16sp"
                 android:textColor="#FFFFFF"
                 />
             <TextView
@@ -65,7 +65,7 @@
                 android:text="SIZE : null"
                 android:layout_toRightOf="@id/frog_src"
                 android:layout_below="@id/frog_property"
-                android:textSize="16dp"
+                android:textSize="16sp"
                 android:textColor="#FFFFFF"
                 />
             <TextView
@@ -75,7 +75,7 @@
                 android:text="POWER: null"
                 android:layout_toRightOf="@id/frog_src"
                 android:layout_below="@id/frog_size"
-                android:textSize="16dp"
+                android:textSize="16sp"
                 android:textColor="#FFFFFF"
                 />
         </LinearLayout>
