--- a/app/src/main/res/layout/fragment_egg_page.xml
+++ b/app/src/main/res/layout/fragment_egg_page.xml
@@ -16,26 +16,41 @@
         android:layout_alignParentTop="true"
         android:orientation="horizontal"
         android:gravity="center_vertical" >
-        <ImageView
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:src="@drawable/main_dollar"/>
-        <TextView
-            android:id="@+id/tv_user_money"
-            android:background="@color/white"
-            android:text="100"
-            android:textSize="24dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
 
-        <TextView
-            android:background="@color/white"
-            android:text="$"
-            android:textSize="24sp"
+        <ImageView
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:src="@drawable/main_dollar"/>
+
+        <LinearLayout
+            android:layout_marginLeft="16dp"
+            android:id="@+id/main_money_icon"
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_height="wrap_content"/>
+            android:layout_height="32dp"
+            app:layout_constraintRight_toRightOf="@id/log_layout"
+            app:layout_constraintTop_toTopOf="@id/log_layout"
+            android:layout_marginRight="16dp"
+            android:orientation="horizontal"
+            android:gravity="left">
 
+            <TextView
+                android:id="@+id/tv_user_money"
+                android:layout_width="wrap_content"
+                android:textStyle="bold"
+                android:textSize="23sp"
+                android:textColor="@color/white"
+                android:text="100"
+                android:layout_height="match_parent"
+                android:layout_marginHorizontal="8dp"/>
+            <ImageView
+                android:layout_gravity="right"
+                android:layout_height="32dp"
+                android:layout_width="32dp"
+                android:src="@drawable/ic_main_dollar_symbol"
+                />
+
+        </LinearLayout>
 
         <ImageView
             android:layout_alignParentTop="true"
