--- a/app/src/main/res/layout/alert_is_buy_new_frog.xml
+++ b/app/src/main/res/layout/alert_is_buy_new_frog.xml
@@ -18,7 +18,7 @@
         android:textStyle="bold"
         android:textSize="16dp"
         android:textColor="@color/white"
-        android:text="새 개구리를 구매하시겠 습니니까?"/>
+        android:text="새 개구리를 구매하시겠습니까?"/>
 
 
     <ImageView
@@ -49,9 +49,11 @@
 
 
         <TextView
+            android:id="@+id/price"
             android:layout_width="wrap_content"
             android:layout_height="40dp"
-            android:text="-100 "
+            android:text="-100"
+            android:layout_marginRight="16dp"
             android:textSize="24sp"
             android:textColor="@color/white"
             android:textStyle="bold" />
