--- a/app/src/main/res/layout/alert_sell_save_new_egg.xml
+++ b/app/src/main/res/layout/alert_sell_save_new_egg.xml
@@ -4,61 +4,64 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:background="#5555"
     android:layout_width="336dp"
-    android:layout_height="320dp"
-    android:layout_gravity="center">
-
-
-    <ImageView
-        android:id="@+id/iv"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="40dp"
-        android:layout_centerHorizontal="true"
-        android:src="@drawable/ic_egg"/>
-
-
-
-    <LinearLayout
-        android:clickable="true"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:gravity="center_vertical"
-        android:layout_below="@+id/iv"
-        android:padding="8dp"
-        android:weightSum="2">
-
+    android:layout_height="wrap_content"
+    android:padding="8dp">
 
         <TextView
-            android:id="@+id/tv_sell"
-            android:background="@color/purple_200"
-            android:layout_width="0dp"
-            android:layout_weight="1"
+            android:id="@+id/frog_species"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:text="Normal Frog"
             android:gravity="center"
-            android:layout_height="56dp"
-            android:text="바로 판매"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
             android:textSize="32sp"
-            android:textColor="@color/black"
-            android:textStyle="bold" />
+            android:textStyle="bold"/>
+        <ImageView
+            android:id="@+id/iv"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true"
+            android:src="@drawable/ic_egg"/>
+
+        <LinearLayout
+            android:clickable="true"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:gravity="center_vertical"
+            android:layout_below="@+id/iv"
+            android:padding="8dp"
+            android:weightSum="2">
+
+            <TextView
+                android:id="@+id/tv_sell"
+                android:background="@color/purple_200"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:layout_height="56dp"
+                android:text="바로 판매"
+                android:textSize="32sp"
+                android:textColor="@color/black"
+                android:textStyle="bold" />
 
 
-        <TextView
-            android:id="@+id/tv_save"
-            android:layout_marginLeft="16dp"
-            android:background="@color/purple_200"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:layout_height="56dp"
-            android:text="창고 저장"
-            android:textSize="32sp"
-            android:textColor="@color/black"
-            android:textStyle="bold" />
+            <TextView
+                android:id="@+id/tv_save"
+                android:layout_marginLeft="16dp"
+                android:background="@color/purple_200"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:layout_height="56dp"
+                android:text="창고 저장"
+                android:textSize="32sp"
+                android:textColor="@color/black"
+                android:textStyle="bold" />
 
-
-    </LinearLayout>
-
+        </LinearLayout>
 
 
 </RelativeLayout>
